--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/schedule": "^0.4.1",
     "apollo-server-express": "^2.19.0",
+    "bcrypt": "^5.0.0",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
@@ -61,6 +62,7 @@
     "@nrwl/node": "11.0.15",
     "@nrwl/tao": "11.0.15",
     "@nrwl/workspace": "11.0.15",
+    "@types/bcrypt": "^3.0.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/jest": "26.0.8",
     "@types/mongoose": "^5.10.3",
