activation code gen service init

--- a/nx.json
+++ b/nx.json
@@ -52,6 +52,9 @@
     },
     "backend-authentication-services": {
       "tags": []
+    },
+    "backend-users-services": {
+      "tags": []
     }
   }
 }
